tests/utils/setup.ts
/**
 * Vitest Setup File
 * ãƒ†ã‚¹ãƒˆå®Ÿè¡Œå‰ã®ã‚°ãƒ­ãƒ¼ãƒãƒ«ã‚»ãƒƒãƒˆã‚¢ãƒƒãƒ—
 */

import { beforeAll, afterAll, beforeEach, afterEach } from 'vitest';
import { ReportHelpers, PerformanceHelpers } from './test-helpers';

// ã‚°ãƒ­ãƒ¼ãƒãƒ«ãƒ†ã‚¹ãƒˆè¨­å®š
beforeAll(() => {
  console.log('ğŸš€ Starting test suite...');

  // ç’°å¢ƒå¤‰æ•°ã®è¨­å®š
  process.env.NODE_ENV = 'test';
  process.env.TZ = 'Asia/Tokyo';

  // ã‚³ãƒ³ã‚½ãƒ¼ãƒ«å‡ºåŠ›ã®è¨­å®š
  if (process.env.CI) {
    console.log('Running in CI environment');
  }
});

afterAll(() => {
  console.log('âœ… Test suite completed');
});

// å„ãƒ†ã‚¹ãƒˆã‚¹ã‚¤ãƒ¼ãƒˆã®å‰å¾Œå‡¦ç†
beforeEach((context) => {
  PerformanceHelpers.startTimer();

  // ãƒ†ã‚¹ãƒˆé–‹å§‹ãƒ­ã‚°
  console.log(`\nğŸ“‹ Running: ${context.task.name}`);
});

afterEach((context) => {
  const duration = PerformanceHelpers.endTimer();

  // ãƒ‘ãƒ•ã‚©ãƒ¼ãƒãƒ³ã‚¹ãƒã‚§ãƒƒã‚¯ï¼ˆé…ã„ãƒ†ã‚¹ãƒˆã‚’æ¤œçŸ¥ï¼‰
  if (duration > 1000) {
    console.warn(`âš ï¸  Slow test detected: ${context.task.name} (${duration}ms)`);
  }

  // ãƒ†ã‚¹ãƒˆçµæœãƒ­ã‚°
  const status = context.task.result?.state === 'pass' ? 'PASS' : 'FAIL';
  ReportHelpers.logTestCase(context.task.name, status, {
    duration: `${duration}ms`,
    file: context.task.file?.name,
  });
});

// ã‚°ãƒ­ãƒ¼ãƒãƒ«ãƒ¢ãƒƒã‚¯ã®è¨­å®š
global.console = {
  ...console,
  // ãƒ†ã‚¹ãƒˆä¸­ã®ã‚³ãƒ³ã‚½ãƒ¼ãƒ«å‡ºåŠ›ã‚’æŠ‘åˆ¶ï¼ˆå¿…è¦ã«å¿œã˜ã¦æœ‰åŠ¹åŒ–ï¼‰
  // log: vi.fn(),
  // warn: vi.fn(),
  // error: vi.fn(),
};

// æœªå‡¦ç†ã®Promiseã‚’æ¤œçŸ¥
process.on('unhandledRejection', (reason, promise) => {
  console.error('Unhandled Rejection at:', promise, 'reason:', reason);
  // ãƒ†ã‚¹ãƒˆå¤±æ•—ã¨ã—ã¦æ‰±ã†
  throw new Error(`Unhandled Promise Rejection: ${reason}`);
});

// ãƒ¡ãƒ¢ãƒªãƒªãƒ¼ã‚¯æ¤œçŸ¥ï¼ˆç°¡æ˜“ç‰ˆï¼‰
const initialMemory = process.memoryUsage();
afterAll(() => {
  const finalMemory = process.memoryUsage();
  const memoryIncrease = finalMemory.heapUsed - initialMemory.heapUsed;

  if (memoryIncrease > 50 * 1024 * 1024) { // 50MBä»¥ä¸Šå¢—åŠ 
    console.warn(`âš ï¸  Potential memory leak detected: ${Math.round(memoryIncrease / 1024 / 1024)}MB increase`);
  }
});